# lango

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  mypy.ini  pyproject.toml
.github/workflows/: docker-test.yml  pre-commit.yml
examples/minio/: example.minio  short.minio
examples/systemo/: example.syso
lango/: cli.py
lango/minio/: ast_nodes.py  ast_printer.py  ast_transformer.py  compiler.py  interpreter.py  minio.lark  parser.py  typecheck.py
lango/minio/ast/: nodes.py  printer.py  transformer.py
lango/minio/compiler/: go.py  prelude.go  prelude.py  python.py  systemf.py
lango/minio/interpreter/: interpreter.py
lango/minio/parser/: minio.lark  parser.py
lango/minio/prelude/: elem.minio  length.minio  list.minio  math.minio
lango/minio/typechecker/: checker.py  infer.py  infer_ast.py  mini_types.py  minio_types.py  simple_checker.py  typecheck.py  types.py  unify.py
lango/parser/: minio.lark  parser.py
lango/shared/: parser.py
lango/shared/compiler/: python.py
lango/shared/typechecker/: lango_types.py  unify.py
lango/systemo/: overloaded.py
lango/systemo/ast/: nodes.py  precedence_rewriter.py  transformer.py
lango/systemo/compiler/: prelude.py  python.py
lango/systemo/interpreter/: interpreter.py
lango/systemo/parser/: parser.py  systemo.lark
lango/typechecker/: infer.py
src/lango/: cli.py
src/lango/parser/: minio.lark  (+1 more)
src/system_o/: cli.py
test/: test_minio.py  test_systemo.py
test/minio/: test_minio.py  test_parser.py
test/systemo/: test_systemo.py
test/utility/: __init__.py  file_tester.py
(+212 files in other folders)
