[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "system_o"
version = "0.1.0"
description = "TODO"
readme = "README.md"
authors = [ {name = "Anton Kesy", email = "antonkesy@gmail.com"} ]
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {text = "MIT license"}
dependencies = [
  "pytest==8.3.3",
  "typer==0.16.0",
]

[project.urls]
bugs = "https://github.com/antonkesy/systemo/issues"
homepage = "https://github.com/antonkesy/systemo"

[project.scripts]
system_o = "system_o.cli:app"
