[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lango"
version = "0.1.0"
description = "TODO"
readme = "README.md"
authors = [ {name = "Anton Kesy", email = "antonkesy@gmail.com"} ]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {text = "MIT license"}
dependencies = [
  "pytest==8.3.3",
  "typer==0.16.0",
  "lark==1.2.2",
]

[project.optional-dependencies]
dev = [
  "coverage==7.10.2",
  "mypy==1.17.1",
]

[project.urls]
bugs = "https://github.com/antonkesy/lang-o/issues"
homepage = "https://github.com/antonkesy/lang-o"

[project.scripts]
lango = "lango.cli:main"
